--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "gravatar-url": "^2.0.0",
     "jwt-decode": "^2.2.0",
     "normalizr": "^3.2.4",
+    "phoenix": "^1.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -16,6 +17,7 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.1.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.12",
@@ -30,7 +32,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.3.0",
-    "prettier": "^1.6.1" 
+    "prettier": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
